@@ -1,0 +1,43 @@
+<?php
+/**
+ * Login
+ *
+ * Copyright 2010 by Jason Coward <jason@collabpad.com> and Shaun McCormick
+ * <shaun@collabpad.com>
+ *
+ * Login is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License as published by the Free
+ * Software Foundation; either version 2 of the License, or (at your option) any
+ * later version.
+ *
+ * Login is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+ * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * Login; if not, write to the Free Software Foundation, Inc., 59 Temple
+ * Place, Suite 330, Boston, MA 02111-1307 USA
+ *
+ * @package login
+ */
+/**
+ * Update Profile English lexicon for Login
+ *
+ * @package login
+ * @subpackage lexicon
+ */
+$_lang['login.address'] = 'Address';
+$_lang['login.city'] = 'City';
+$_lang['login.country'] = 'Country';
+$_lang['login.email'] = 'Email';
+$_lang['login.fax'] = 'Fax';
+$_lang['login.fullname'] = 'Full Name';
+$_lang['login.mobilephone'] = 'Cellphone';
+$_lang['login.phone'] = 'Phone';
+$_lang['login.profile_err_nf'] = 'Profile not found!';
+$_lang['login.profile_err_save'] = 'An unknown error occurred while trying to update the profile.';
+$_lang['login.profile_updated'] = 'Profile Updated.';
+$_lang['login.state'] = 'State';
+$_lang['login.update_profile'] = 'Update Profile';
+$_lang['login.website'] = 'Website';
+$_lang['login.zip'] = 'Zip';
