@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.0 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added UpdateProfile snippet to enable updating of profile from front-end
 - [#ADDON-129] Added name to default Register form
 - [#ADDON-106] Fixed incorrect plugin event invoking
 - [#ADDON-107] Added missing lexicon entry register.password_confirm
